<?xml version="1.0"?>

<package format="2">
    <name>gps</name>

    <version>2.0.0</version>

    <description>Convert Novatel receiver messages to ROS messages output</description>

    <maintainer email="184811207@qq.com">Arthur Morgan</maintainer>

    <license>CDDL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>serial</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>novatel_gps_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>serial</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>serial</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>novatel_gps_msgs</exec_depend>


</package>
